--- a/airflow/Dockerfile
+++ b/airflow/Dockerfile
@@ -2,3 +2,4 @@ FROM apache/airflow:latest
 COPY requirements.txt /requirements.txt
 RUN pip install --upgrade pip
 RUN pip install --no-cache-dir -r /requirements.txt
+RUN pip install apache-airflow-providers-databricks
